--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,21 +12,36 @@
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/btnChatMessage"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/bg_chat_message"
+        android:padding="13dp"
+        android:src="@drawable/ic_chat_message"
+        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomBar"
-        app:bb_activeTabAlpha="1"
-        app:bb_titleTypeFace="fonts/roboto_regular.ttf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:itemIconTint="@color/custom_tab_home"
-        app:bb_inActiveTabAlpha="0.6"
         android:background="@color/grayTab"
-        app:itemTextColor="@color/grayTextColor"
+        app:bb_activeTabAlpha="1"
+        app:bb_inActiveTabAlpha="0.6"
         app:bb_showShadow="true"
-        app:menu="@menu/navigation_home"
+        app:bb_titleTypeFace="fonts/roboto_regular.ttf"
+        app:itemIconTint="@color/custom_tab_home"
+        app:itemTextColor="@color/grayTextColor"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/navigation_home" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
